@@ -1,6 +1,0 @@
-<strings>
-	<string id="30100">General</string>
-	<string id="30203">Enable Metadata</string>
-	<string id="30101">Enable Debugging to File</string>
-	<string id="30102">Enable Debugging to Notice(s)</string>
-</strings>
