@@ -1,4 +1,10 @@
 
+[COLOR grey][Date: 2014.04.28][/COLOR][COLOR black][Post: 1][/COLOR]
+[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.3.4
+
+[COLOR grey][Date: 2013.12.02][/COLOR][COLOR black][Post: 1][/COLOR]
+[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.3.3
+
 [COLOR grey][Date: 2013.09.16][/COLOR][COLOR black][Post: 1][/COLOR]
 [COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.3.2 (Initial Build)
 
